--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
   <title>Meditators Group</title>
+  <stlyle>
+    * {
+      font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+      font-weight: 300;
+    }
+    h1 { text-align: center; }
+    p { text-align: center; }
+  </style>
 </head>
 <body>
   <h1>Meditators Group</h1>
