--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
   <h1>Meditators Group</h1>
-  <p>Meditating in groups can enhance your experience. We are here to hel to capitalise on this phenomena.</p>
+  <p>Meditating in groups can enhance your experience. We are here to help to capitalise on this phenomena.</p>
 </body>
 </html>
