--- a/index.html
+++ b/index.html
@@ -1,50 +1,93 @@
 <!DOCTYPE html> 
-<html>
+<html lang="en">
 <head>
-  <title>Meditators Group</title>
+  <title>Meditator's Group</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <style type="text/css">
-    * {
-      padding: 0;
-      margin: 0;
+    /* text reset */
+    html, body {
       font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
       font-weight: 300;
+      color: #dedede;
+      text-align: center;
     }
-    html, body, article {
-      width: 100%;
-      height: 100%;
+    /* background reset */
+    html, body {
+      background-color: #a85400;
     }
-    article {
+    html {
+      position: relative;
+      min-height: 100%;
+    }
+    body {
+      margin-bottom: 35px;
+    }
+    .jumbotron {
       background-image: url('assets/bg.jpg');
+      background-color: inherit;
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
     }
-    h1, p {
-      color: #dedede;
-      text-align: center;
-      padding: 30px;
+    .newsletter {
+      padding-bottom: 20px;
+    }
+    footer {
+      position: absolute;
+      bottom: 0;
+      height: 35px;
+    }
+    h1, p, label {
       text-shadow:
-          2px 2px black,
-          0 0 10px black;
-    }
-    h1 {
-      font-size: 6em;
-    }
-    p {
-      font-size: 3em;
+        2px 2px black,
+        0 0 10px black;
     }
   </style>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EGCEJWH1F1"></script>
+  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-EGCEJWH1F1');</script>
 </head>
 <body>
-  <article>
-    <h1>Meditators Group</h1>
-    <p>Meditating in groups can enhance your experience. We are here to help to capitalise on this phenomena.</p>
-  </article>
+  <header class="jumbotron jumbotron-fluid">
+    <article class="container">
+      <h1 class="display-4">Meditator's Group</h1>
+      <p class="lead">Meditating in groups can enhance your experience. We are here to help to capitalise on this phenomena.</p>
+    </article>
+  </header>
+  <div class="newsletter container-fluid">
+    <div class="row">
+      <div class="col">
+        <form>
+          <p>Please subscribe our newsletter bellow if you are interested:</p>
+          <div class="form-row align-items-center">
+            <div class="form-group col-md-6">
+              <label class="sr-only" for="name">Name</label>
+              <input type="text" id="name" class="form-control" placeholder="Name">
+            </div>
+            <div class="form-group col-md-6">
+              <label class="sr-only" for="email">E-mail</label>
+              <input type="email" id="email" class="form-control" placeholder="E-mail">
+            </div>
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="meditator">
+            <label class="form-check-label" for="meditator">I would like to meditate in group(s).</label>
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" value="" id="organiser">
+            <label class="form-check-label" for="organiser">I would like to organise group(s).</label>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <footer class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <p>&copy;2021 Meditator's Group. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
